--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "fabric-contract-api": "^2.2.3",
+    "fabric-network": "^2.2.13",
     "mongoose": "^6.3.6"
   }
 }
