--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fabric-ca-client": "^2.2.13",
     "fabric-contract-api": "^2.2.3",
     "fabric-network": "^2.2.13",
     "mongoose": "^6.3.6"
