--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.0.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
+    "react-calendar": "^3.7.0",
     "react-cookie": "^4.1.1",
     "react-cropper": "^2.1.8",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-easy-crop": "^4.3.0",
     "react-image-crop": "^10.0.2",
