--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-cookie": "^4.1.1",
