--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "7": "0.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -21,9 +22,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.1",
-    "swiper": "^6.8.4",
+    "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
