--- a/chat/noti-server/build.gradle
+++ b/chat/noti-server/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.google.firebase:firebase-admin:6.8.1'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
 }
 
 tasks.named('test') {
