--- a/chat/chat-server/pom.xml
+++ b/chat/chat-server/pom.xml
@@ -43,6 +43,10 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 		<!-- View JSP -->
 
 	</dependencies>
