Add : RDS MariaDB 연동 JPA 코드 추가

--- a/chat/chat-server/src/main/resources/application.properties
+++ b/chat/chat-server/src/main/resources/application.properties
@@ -7,3 +7,18 @@ spring.mvc.view.suffix=.jsp
 
 #JSP to Modify Not Restart Server
 server.servlet.jsp.init-parameters.development=true
+
+#Connection of MariaDB
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://codetattoo.cwtbzbyluijp.ap-northeast-2.rds.amazonaws.com/Chat_Data
+spring.datasource.username=codeTattoo
+spring.datasource.password=12345678
+
+#update the schema with the given values.
+spring.jpa.hibernate.ddl-auto=update
+#To beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+#show sql
+spring.jpa.properties.hibernate.show-sql=true
+#open-in-view
+spring.jpa.open-in-view=false
