--- a/chat/chat-server/pom.xml
+++ b/chat/chat-server/pom.xml
@@ -49,6 +49,17 @@
 		</dependency>
 		<!-- View JSP -->
 
+		<!-- Connect MariaDB -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- Connect MariaDB -->
 	</dependencies>
 
 	<build>
