--- a/chat/chat-server/pom.xml
+++ b/chat/chat-server/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- View JSP -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
