--- a/chat/chat-server/pom.xml
+++ b/chat/chat-server/pom.xml
@@ -65,6 +65,23 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- Connect MariaDB -->
+
+		<!-- Apache HttpClient -->
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.1.3</version>
+		</dependency>
+		<!-- Apache HttpClient -->
+
+		<!-- Gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<!-- Gson -->
 	</dependencies>
 
 	<build>
