--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "fabric-contract-api": "^2.2.3",
     "fabric-network": "^2.2.13",
     "formidable": "^2.0.1",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "request": "^2.88.2"
   }
 }
