--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-backend/node_modules/
+MainServer/node_modules/
 
-backend/config/
+MainServer/config/
 
-backend/blockchainFiles/
+MainServer/blockchainFiles/
 
-backend/test.js
+MainServer/test.js
 
 .idea
 
