--- a/main/package.json
+++ b/main/package.json
@@ -19,6 +19,7 @@
     "fabric-network": "^2.2.13",
     "formidable": "^2.0.1",
     "mongoose": "^6.3.6",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sync-request": "^6.1.0"
   }
 }
