--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "firebase": "^9.13.0",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.3",
     "qs": "^6.11.0",
@@ -22,6 +23,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
